--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,9 @@
 
  <h1>Processes history:</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
+    <th>Id</th>
     <th>File</th>
     <th>Date</th>
     <th>Status</th>
