--- a/app/views/imported_files/show.html.erb
+++ b/app/views/imported_files/show.html.erb
@@ -1,13 +1,6 @@
 <h1>Import Log #<%= @imported_file.id %></h1>
 
 
-<% flash.each do |type, msg| %>
-  <div>
-    <%= msg %>
-  </div>
-<% end %>
-
-
 
 <div class="form-group">
   Filename: <%= @imported_file.filename %>
@@ -29,14 +22,35 @@
   User: <%= @imported_file.user.email %>
 </div>
 
-<%= form_with url: "/search", method: :get do |form| %>
+<div class="form-group">
+  <%= link_to 'Back', imported_files_path %>
+</div>
+
 
     <table class="table table-striped my-4 py-4">
-      <% if @imported_file.format == nil or @imported_file.format = "" %>
+      
+      <% if @imported_file.status == nil or @imported_file.status == "Pending" %>
+
+
+      <%= form_for @imported_file, url: {action: "format_headers"}, html: {class: "nifty_form"} do |form| %>
+
+
+        <% flash.each do |type, msg| %>
+          <% if type == "notice" then %>
+            <div class="my-2 alert alert-success" role="alert">
+              <h4 class="">    <%= msg %></h4> 
+            </div>
+          <% else %>
+            <div class="my-2 alert alert-danger" role="alert">
+              <h4 class="">    <%= msg %></h4> 
+            </div>
+          <% end %>
+        <% end %>
 
         <div class="my-2 alert alert-warning" role="alert">
-          <h4 class="">⚠️ Please verify the correct header for each column of this file</h4> 
+          <h4 class="">Please assign the correct header for each column of this file</h4> 
         </div>
+
 
         <tr>
           <th></th>
@@ -45,8 +59,17 @@
               <%= select_tag "column_"+@i.to_s, raw(render  'select'), {:class => 'form-select text-primary', :required=>"true"} %>
             </th>
           <% end %> 
+          <th>
+              <%= form.submit "Assign & Continue", {:class => 'btn btn-primary'} %>
+          </th>
         </tr>
+
       <% end %>
+
+
+
+    <% end %>
+
 
       <% x=0 %>
       <% @imported_file.imported_records.limit(4).each do |imported_record| %>
@@ -58,9 +81,6 @@
           <td><%= imported_record.column_4 %></td>
           <td><%= imported_record.column_5 %></td>
           <td><%= imported_record.column_6 %></td>
-          <td><%= imported_record.column_7 %></td>
-          <td><%= imported_record.status %></td>
-          <td><%= imported_record.message %></td>
         </tr>
       <% end %>
 
@@ -80,17 +100,12 @@
           <td><%= imported_record.column_4 %></td>
           <td><%= imported_record.column_5 %></td>
           <td><%= imported_record.column_6 %></td>
-          <td><%= imported_record.column_7 %></td>
-          <td><%= imported_record.status %></td>
-          <td><%= imported_record.message %></td>
+
         </tr>
       <% end %>
       
 
     </table>
-      <%= form.submit "Continue", {:class => 'btn btn-primary '}%>
 
-
-<% end %>
 
 
