--- a/app/views/imported_files/show.html.erb
+++ b/app/views/imported_files/show.html.erb
@@ -1,7 +1,5 @@
 <h1>Import Log #<%= @imported_file.id %></h1>
 
-
-
 <div class="form-group">
   Filename: <%= @imported_file.filename %>
 </div>
@@ -29,9 +27,6 @@
 
     <table class="table table-striped my-4 py-4">
 
-      <% if @edit_table_header  %>
-
-        <%= form_for @imported_file, url: {action: "format_headers"}, html: {class: "nifty_form"} do |form| %>
           <% flash.each do |type, msg| %>
             <% if type == "notice" then %>
               <div class="my-2 alert alert-success" role="alert">
@@ -43,9 +38,16 @@
               </div>
             <% end %>
           <% end %>
+          
+      <% if @edit_table_header  %>
+
+        <%= form_for @imported_file, url: {action: "format_headers"}, html: {class: "nifty_form"} do |form| %>
+
+
           <div class="my-2 alert alert-warning" role="alert">
             <h4 class="">Please assign the correct header for each column of this file</h4> 
           </div>
+          
           <tr>
             <th></th>
             <% for @i in 1..6 do %>
@@ -60,36 +62,32 @@
         <% end %>
       <% end %>
 
-
       <% x=0 %>
-      <% @imported_file.imported_records.limit(@row_limit).each do |imported_record| %>
+      <% @filtered_imported_records.each do |row| %>
         <tr>
           <td><%= x+=1 %></td>
-          <td><%= imported_record.column_1 %></td>
-          <% if @import_record_details == false %>
-            <td><%= imported_record.column_2 %></td>
-            <td><%= imported_record.column_3 %></td>
-            <td><%= imported_record.column_4 %></td>
-            <td><%= imported_record.column_5 %></td>
-            <td><%= imported_record.column_6 %></td>
+          <td><%= row.column_1 %></td>
+          <% if @display_imported_record_details == false %>
+            <td><%= row.column_2 %></td>
+            <td><%= row.column_3 %></td>
+            <td><%= row.column_4 %></td>
+            <td><%= row.column_5 %></td>
+            <td><%= row.column_6 %></td>
           <% else %>
-            <td><%= imported_record.status %></td>
-            <td><%= imported_record.message %></td>
-
+            <td><%= row.status %></td>
+            <td><%= row.message %></td>
           <% end %>
-
-
         </tr>
       <% end %>
 
-      <% s = @imported_file.imported_records.size %>
+      <% s = @filtered_imported_records.size %>
       <% if s > x then %>
         <tr> 
           <td>...</td>
          
         </tr>
 
-        <% imported_record =  @imported_file.imported_records.last   %>
+        <% row =  @filtered_imported_records.last   %>
         <tr>
           <td><%= s+=1 %></td>
           <td>Rows in file</td>
