--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,39 @@
-<h1>Contacts:</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Contact Importer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/imported_files">Processes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/contacts">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/<%= current_user.id %>"><%= current_user.email %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<div class="my-4 px-2">
+  <h1>Contacts database</h1>
+
+
+  <div class="form-group">
+    Total: <%= current_user.contacts.count %> records.
+  </div>
+
+
+</div>
 
 <table class="table table-striped">
   <tr>
@@ -14,6 +49,7 @@
     <th colspan="2"></th>
   </tr>
  
+ <%= paginate @contacts %>
 
   <% @contacts.reverse.each do |contact| %>
     <tr>
@@ -27,8 +63,7 @@
       <td><%= contact.email %></td>
 
     </tr>
-   <% contact.destroy %> 
+   
   <% end %>
 
-   <%= link_to 'Back', imported_files_path %>
 </table>
