--- a/app/views/imported_files/index.html.erb
+++ b/app/views/imported_files/index.html.erb
@@ -1,8 +1,28 @@
-<p>
-  <strong>Logged as:</strong>
-  <%= current_user.email %> | <%= link_to 'Logout', logout_path, method: "delete" %>  |  <%= link_to 'Contacts', contacts_path %>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Contact Importer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="/imported_files">Processes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contacts">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/<%= current_user.id %>"><%= current_user.email %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-</p>
  
 
 
@@ -35,11 +55,10 @@
   <% @imported_files.reverse.each do |imported_file| %>
     <tr>
       <td><%= imported_file.id %></td>
-      <td><%= imported_file.filename %></td>
+      <td><%= link_to  imported_file.filename, imported_file_path(imported_file) %> </td>
       <td><%= imported_file.date %></td>
       <td><%= imported_file.status %></td>
 
-      <td><%= link_to 'Show', imported_file_path(imported_file) %></td>
     </tr>
   <% end %>
 </table>
