--- a/app/views/imported_files/show.html.erb
+++ b/app/views/imported_files/show.html.erb
@@ -1,27 +1,49 @@
-<h1>Import Log #<%= @imported_file.id %></h1>
 
-<div class="form-group">
-  Filename: <%= @imported_file.filename %>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Contact Importer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="/imported_files">Processes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contacts">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/<%= current_user.id %>"><%= current_user.email %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<div class="form-group">
-  Status: <%= @imported_file.status %>
-</div>
+<div class="my-4 px-2">
 
-<div class="form-group">
- Date: <%= @imported_file.date %>
-</div>
+  <h1>Import Log #<%= @imported_file.id %></h1>
 
-<div class="form-group">
-  Format: <%= @imported_file.format %>
-</div>
+  <div class="form-group">
+    Filename: <%= @imported_file.filename %>
+  </div>
 
-<div class="form-group">
-  User: <%= @imported_file.user.email %>
-</div>
+  <div class="form-group">
+    Status: <%= @imported_file.status %>
+  </div>
 
-<div class="form-group">
-  <%= link_to 'Back', imported_files_path %>
+  <div class="form-group">
+   Date: <%= @imported_file.date.strftime("%d %B %Y - %H:%m:%S %:z") %>
+  </div>
+
+  <div class="form-group">
+    User: <%= @imported_file.user.email %>
+  </div>
+
 </div>
 
 
@@ -38,7 +60,7 @@
               </div>
             <% end %>
           <% end %>
-          
+
       <% if @edit_table_header  %>
 
         <%= form_for @imported_file, url: {action: "format_headers"}, html: {class: "nifty_form"} do |form| %>
