--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,42 @@
-<h1>Welcome <%= current_user.email %></h1>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Contact Importer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-<% flash.each do |type, msg| %>
-  <div>
-    <%= msg %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Signup</a>
+        </li>
+      </ul>
+    </div>
   </div>
-<% end %>
+</nav>
 
+<div class="my-4 px-2">
+	<h1>Welcome to Contacts Database Importer</h1>
+
+	<div class="my-4 px-2">
+		<% flash.each do |type, msg| %>
+		  <div>
+		    <%= msg %>
+		  </div>
+		<% end %>
+	</div>
+
+	<% unless logged_in? %>
+
+	<p>Please <a href="/login">log in</a> or <a href="/signup">sign up</a> to continue.</p>
+
+	<% end %>
+
+
+</div>
 
 
